# python202407

./: .gitattributes  .gitignore  Readme.md  car.py  carapp.py  decorators.ipynb  first_notebook.ipynb  functions.py  geometry.mdj  intro.py  iterations.ipynb  magicsquare.ipynb  oop.ipynb  schemas.excalidraw  squaredata.py  squaredatanp.py
app_package/: Readme.md
app_package/car/: app.py
app_using_lib/: Readme.md  app.py
concurrent_programming/: demo_process_pool.py  demo_threading.py
fastapi_cars/: main.py  schemas.py
geometryproject/: circle.py  demo_forms.py  form.py  geometry.ipynb  mesurable.py  point.py  polygon.py  segment.py  weightedpoint.py
geometryproject/tests/: conftest.py  test_circle.py  test_point.py  test_polygon.py
geometryproject_pack/: demo_forms.py
geometryproject_pack/geometry/: __init__.py
geometryproject_pack/geometry/data/: circle.py  point.py  polygon.py  segment.py  weightedpoint.py
geometryproject_pack/tests/: conftest.py  test_circle.py  test_point.py  test_polygon.py
magicsquareproject/: Readme.md  app.py  magicalsquare.py
magicsquareproject/tests/: __init__.py  conftest.py  test_magicalsquare.py  test_magicalsquare2.py
project_with_env/: Readme.md  app.py  pyproject.toml  requirements.txt
project_with_env/src/: car.py  gaussapp.py
project_with_env/tests/: test_car.py
