[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gauss-app"
version = "2024.7.0"
dependencies = [
  "numpy",
]
requires-python = ">=3.8"
authors = [
  {name = "Matthias C", email = "matthias@learning64.net"},
]
maintainers = [
  {name = "Matthias C", email = "matthias@learning64.net"},
]
description = "Gauss Distribution Example"
readme = "Readme.md"
keywords = ["gauss", "normal", "mean", "std"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/matthcol/python202407.git"
"Bug Tracker" = "https://github.com/matthcol/python202407/issues"
Changelog = "https://github.com/matthcol/python202407/blob/main/CHANGELOG.md"

[project.scripts]
gauss-cli = "gaussapp:run"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
sources = ["src"]